--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.8",
-    "@clerk/themes": "^2.1.3",
+    "@clerk/nextjs": "4.29.1",
+    "@clerk/themes": "1.7.9",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@uploadthing/react": "^6.5.3",
@@ -19,6 +20,7 @@
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
