--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@clerk/nextjs": "4.29.1",
     "@clerk/themes": "1.7.9",
+    "@hookform/resolvers": "^3.4.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@uploadthing/react": "^6.5.3",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@uploadthing/react": "^6.5.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
@@ -23,9 +27,11 @@
     "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.10.3"
+    "uploadthing": "^6.10.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "typescript": "^5",
